package S191220112;

import S191220112.Set.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
